# dummy-lnurl-server

./: Cargo.toml
src/: config.rs  main.rs  routes.rs
