[package]
name = "lnurl-server"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/benthecarman/lnurl-server"
homepage = "https://github.com/benthecarman/lnurl-server"
readme = "README.md"
description = "A simple LNURL server"

[[bin]]
name = "lnurl-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.6.20"
bitcoin = { version = "0.32.7", features = ["serde"] }
clap = { version = "4.1.14", features = ["derive", "env"] }
lnurl-rs = { version = "0.9.0", default-features = false }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
hex = "0.4.3"
rand = "0.8"
